gcc/testsuite/g++.dg/parse/enum3.C
// PR c++/28261

struct A {};

A::A (enum { e }) {} // { dg-error "defined|token" }
